--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "2.0.1",
+    "@ionic-native/core": "^5.24.0",
+    "@ionic-native/firebase-authentication": "^5.24.0",
+    "@ionic-native/native-page-transitions": "^5.24.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +19,8 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "firebase": "^7.14.2",
+    "flatlist-react": "^1.3.2",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
