--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@capacitor/core": "2.0.1",
     "@ionic-native/core": "^5.24.0",
+    "@ionic-native/file": "^5.24.0",
+    "@ionic-native/file-transfer": "^5.24.0",
     "@ionic-native/firebase-authentication": "^5.24.0",
     "@ionic-native/native-page-transitions": "^5.24.0",
     "@ionic/react": "^5.0.7",
+    "@ionic/react-hooks": "^0.0.6",
     "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -19,6 +22,8 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "firebase": "^7.14.2",
     "flatlist-react": "^1.3.2",
     "ionicons": "^5.0.0",
