--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "core-js": "^3.6.5",
     "firebase": "^7.14.2",
     "flatlist-react": "^1.3.2",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
