--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,5 +17,6 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#ffffff",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "gcm_sender_id": "360108059082"
 }
