Announcements and Class Announcements section: Pagination implemented and deployed to PWA

--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,12 @@
   "hosting": {
     "public": "build",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "site": "st-marys-school"
+    "site": "st-marys-school",
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
