--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "cordova-plugin-firebase-authentication": "^3.3.0",
+    "cordova-support-android-plugin": "^1.0.2",
+    "cordova-support-google-services": "^1.4.0",
     "core-js": "^3.6.5",
     "firebase": "^7.14.2",
     "flatlist-react": "^1.3.2",
