--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@capacitor/android": "^2.0.1",
     "@capacitor/core": "2.0.1",
+    "@ionic-native/app-minimize": "^5.26.0",
     "@ionic-native/core": "^5.24.0",
     "@ionic-native/firebase-authentication": "^5.24.0",
     "@ionic/react": "^5.0.7",
@@ -19,16 +20,18 @@
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "cordova-plugin-appminimize": "^1.0.1",
     "cordova-plugin-firebase-authentication": "^3.3.0",
     "cordova-support-android-plugin": "^1.0.2",
     "cordova-support-google-services": "^1.4.0",
     "core-js": "^3.6.5",
     "firebase": "^7.14.2",
-    "flatlist-react": "^1.3.2",
+    "flatlist-react": "^1.4.1",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.0",
+    "react-images": "^1.1.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
