--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,5 +4,12 @@
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "build",
-  "cordova": {}
+  "cordova": {},
+  "plugins": {
+    "CapacitorFirebaseAuth": {
+      "providers": ["phone"],
+      "languageCode": "en",
+      "nativeAuth": false
+    }
+  }
 }
